--- a/javascripts/RightPanel/RightPanel.scss
+++ b/javascripts/RightPanel/RightPanel.scss
@@ -1,6 +1,4 @@
 #rightPanel {
-    position: absolute;
-    right: 0;
     width: 200px;
-    top: var(--height-of-top-bar);
+    grid-column: 3;
 }
