--- a/javascripts/MainArea/MainArea.scss
+++ b/javascripts/MainArea/MainArea.scss
@@ -1,10 +1,6 @@
 #mainArea {
-    width: calc(100% - 200px);
     height: calc(100% - (var(--height-of-top-bar) + 5px) * 2);
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
+    grid-column: 2;
 }
 .drawAnimateSelector {
     background: linear-gradient(to top, #c56f02, #f7a553);
