First layer rename attempt

--- a/javascripts/LeftBar/LeftBar.scss
+++ b/javascripts/LeftBar/LeftBar.scss
@@ -6,7 +6,7 @@
     border-radius: 2px;
     cursor: pointer;
     &:hover {
-        background: rgba(blue,.2);
+        background: rgba(206, 68, 15, 0.2);
     }
 }
 #leftBar {
