--- a/javascripts/LeftBar/LeftBar.scss
+++ b/javascripts/LeftBar/LeftBar.scss
@@ -1,14 +1,12 @@
 .toolsLeftPanel {
     height: 20px;
     display: block;
-    margin:10px;
-    padding: 2px;
-    border-radius: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 8px;
     cursor: pointer;
-    &:hover {
-        background: rgba(206, 68, 15, 0.2);
-    }
 }
+
 #leftBar {
     background: #f3cfaf;
     border-radius: 0 5px 5px 0;
@@ -17,4 +15,16 @@
     margin-top: 50%;
     grid-column: 1;
     width: 43px;
+}
+.buttonWrapper {
+    height: 38px;
+    width: 38px;
+    margin-left: auto;
+    margin-right: auto;
+    &:hover {
+        background: rgba(206, 68, 15, 0.2);
+    }
+}
+.activeLeftButton {
+    outline: 1px solid #ce8c3b;
 }
