Showing save dialog

--- a/javascripts/RightPanel/Layer.scss
+++ b/javascripts/RightPanel/Layer.scss
@@ -1,5 +1,8 @@
 .activeLayer {
     background: rgba(139, 146, 99, 0.2);
+    input {
+        width: 159px;
+    }
 }
 .singleLayer img {
     height: 11px;
