--- a/javascripts/LeftBar/LeftBar.scss
+++ b/javascripts/LeftBar/LeftBar.scss
@@ -14,6 +14,7 @@
     height: calc(100% - (var(--height-of-top-bar) + 5px) * 2);
     margin-top: 50%;
     grid-column: 1;
+    position: relative;
     width: 43px;
 }
 .buttonWrapper {
@@ -27,4 +28,28 @@
 }
 .activeLeftButton {
     outline: 1px solid #ce8c3b;
+}
+.color_small_indicator {
+    height: 26px;
+    width: 26px;
+    background: #fff;
+    cursor: pointer;
+    position: absolute;
+    bottom: 20px;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px;
+    div {
+        height: 20px;
+        width: 20px;
+        background: red;
+        display: inline-block;
+        margin-top: 3px;
+    }
+}
+.color_picker_dynosign {
+    position: absolute;
+    left: 48px;
+    z-index: 1;
 }
