Now possible drawing lines of different colors

--- a/javascripts/MainArea/MainArea.scss
+++ b/javascripts/MainArea/MainArea.scss
@@ -20,6 +20,7 @@
 }
 #drawingArea {
     margin-top:10px;
+    background: #fff;
     height: calc(100% - 50px);
     box-shadow: 0 0 5px 2px rgba(0,0,0,.2);
 }
