--- a/gh-pages/_layouts/default.html
+++ b/gh-pages/_layouts/default.html
@@ -17,7 +17,7 @@
             <iframe src="https://ghbtns.com/github-btn.html?user=FallenAngel97&repo=dynosign&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
         </div>
         <ul class="navigation_menu">
-        {% for item in site.data.pageslist %}
+        {% for item in site.data.pageslist.menu %}
             {% if page.url == item.url %}
                 <li class="navigation_link active_link"><a href="{{ item.url }}">{{ item.title }}</a></li>
             {% else %}
