--- a/gh-pages/assets/css/index.scss
+++ b/gh-pages/assets/css/index.scss
@@ -5,12 +5,19 @@
 
 body {
     background: #fff7e9;
+    display: flex;
 }
 #logo_left {
     height: 50px;
 }
-aside {
-    float:left;
+.tool_icon {
+    height: 20px;
+    margin-right: 10px;
+}
+#features_table {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 87px;
 }
 #logo_name {
     font-family: 'PT Sans';
@@ -65,6 +72,7 @@ aside {
 
 main {
     text-align: center;
+    width: 100%;
 }
 
 #project_screen {
