--- a/gh-pages/assets/css/index.scss
+++ b/gh-pages/assets/css/index.scss
@@ -91,3 +91,7 @@ main {
     margin-top: 56px;
     margin-bottom: 42px;
 }
+#documentation_contents {
+    text-align: left;
+    margin-left: 73px;
+}
