Better visuals for dragging layers

--- a/gh-pages/assets/css/index.scss
+++ b/gh-pages/assets/css/index.scss
@@ -95,3 +95,8 @@ main {
     text-align: left;
     margin-left: 73px;
 }
+#link_to_github {
+    margin-top: 34px;
+    color: #000;
+    display: inline-block;
+}
