--- a/javascripts/MainArea/MainArea.scss
+++ b/javascripts/MainArea/MainArea.scss
@@ -3,13 +3,13 @@
     grid-column: 2;
 }
 .drawAnimateSelector {
-    background: linear-gradient(to top, #c56f02, #f7a553);
+    background: linear-gradient(to top, #232323, #6d6d6d);
     box-shadow: 1px 1px 2px 0px rgba(0,0,0,.2);
     border:none;
     border-radius: 5px;
     padding: 5px 10px;
     font-family: 'FranklinGothicDemiC';
-    color: #fff3e0;
+    color: #fff;
     font-size: 16px;
     margin:2px;
     cursor: pointer;
