--- a/javascripts/entry.scss
+++ b/javascripts/entry.scss
@@ -9,7 +9,7 @@ body, html {
     display: flex;
     user-select:none;
     height: 100%;
-    background: #fff5eb;
+    background: #ececec;
 }
 
 #programContainer {
