--- a/gh-pages/_layouts/default.html
+++ b/gh-pages/_layouts/default.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{page.title}}</title>
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/index.css" />
+    <meta name="google-site-verification" content="k1ip_1w-G4OuVmU8lXpWdA68DbuoKY4xf3YqrS-wN-s" />
+    {% seo title=false %}
 </head>
 <body>
     <aside>
